<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleRegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="20dp"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/vehicle_identification_number"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/model"
        app:errorEnabled="true"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/model_name"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/color"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/color"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleRegister"
        android:text="@string/add_vehicle"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"
        />
</LinearLayout>
