<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0061ff"
    android:padding="20dp"
    tools:context=".RegisterActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/blood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_contact_number_1"
                android:inputType="number"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_contact_number_2"
                android:inputType="number"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_contact_number_3"
                android:inputType="number"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:background="@color/design_default_color_primary_dark"
            android:text="@string/register"
            android:textColor="@color/common_google_signin_btn_text_dark" />

    </LinearLayout>

</ScrollView>