<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
     android:background="#0061ff">

    <!--android:backgroundTint="#ffffff"-->



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="76dp"
        android:text= "@string/title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="40dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                 />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            tools:boxBackgroundMode="none">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100sp"
            android:background="@color/design_default_color_primary"
            android:text="@string/login"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />


        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/register_new"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>